[package]
name = "actix_pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
serde_json = "*"
serde = {version = "*",features = ["derive"]}
lazy_static = "*"
serde_urlencoded = "*"
log = "*"
env_logger = "*"
